# input-recorder

./: .gitignore  CMakeLists.txt  main.cpp
include/: defines.hpp  enum-types.hpp  input-reader.hpp  input.hpp  key.hpp  sequence.hpp  stdafx.h
include/constants/: keys.hpp
include/utils/: time-utilities.hpp
include/win-api/: key.hpp  win-kbd-hook.hpp  win-message-queue.hpp
include/winapi/: win-keyboard-message-handler.hpp
